master: - added fix for width select addrese on mobile side;;

--- a/view/frontend/web/css/source/module/_login-holder.less
+++ b/view/frontend/web/css/source/module/_login-holder.less
@@ -138,7 +138,7 @@ and to permit persons to whom the Software is furnished to do so, subject to the
     }
 
     #vipps_addresses {
-        width: 48%;
+        width: 100%;
         margin-bottom: 15px;
     }
 }
@@ -397,6 +397,12 @@ and to permit persons to whom the Software is furnished to do so, subject to the
             .vipps-popup-btn {
                 margin-top: 0;
             }
+        }
+    }
+
+    .account {
+        #vipps_addresses {
+            width: 100%;
         }
     }
 }
